gap bug on android

--- a/static/css/base.less
+++ b/static/css/base.less
@@ -398,8 +398,6 @@ input[data-function*='swipe'] {
 				}
 				@media @highdensity {
 					height: 150px;
-					max-width: 150px;
-					background-size: 150px auto;
 				}
 			}
 			@media @highdensity { flex: 1 1 150px; }
